[tool.poetry]
name = "prokat_mokat_bot"
version = "0.1.0"
description = "Prokat-mokat bot"
authors = ["chamteaomile <socutearr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
