[tool.poetry]
name = "another-try"
version = "0.1.0"
description = "Prokat Mokat bot"
authors = ["chamteaomile <socutearr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "~=0.10.2"
SQLAlchemy = "~=1.3.24"
poetry = "^1.1.6"
alembic = "~=1.5.8"
click = "~=7.1.2"
aiogram = "~=2.12.1"
msgpack = "~=1.0.2"
gino = "~=1.0.1"
numpy = "~=1.20.2"
ddtrace = "~=0.48.0"
aiofiles = "~=0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
